force-app/main/default/objects/TestDriveFeedback__c/TestDriveFeedback__c.object-meta.xml
<CustomObject>
    <label>Test Drive Feedback</label>
    <nameField>
        <displayFormat>FB-{0000000}</displayFormat>
        <label>TestdriveFeedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Driveeedbacks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>