force-app/main/default/objects/TestDriveFeedback__c/fields/Competitor_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Evaluation__c</fullName>
    <label>Are you evaluating any other vehicles?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No, only Electra cars</fullName>
            </value>
            <value>
                <fullName>1-2 other options</fullName>
            </value>
            <value>
                <fullName>3 or more options</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>