force-app/main/default/objects/TestDriveFeedback__c/fields/Drive_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Drive_Satisfaction__c</fullName>
    <label>Overall driving experience satisfaction?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Disappointing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>