force-app/main/default/objects/TestDriveFeedback__c/fields/Expectation_Match__c.field-meta.xml
<CustomField>
    <fullName>Expectation_Match__c</fullName>
    <label>How was the ride?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Exceeded expectations</fullName>
            </value>
            <value>
                <fullName>Met expectations</fullName>
            </value>
            <value>
                <fullName>Below expectations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>