force-app/main/default/objects/TestDriveFeedback__c/fields/Expected_Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Purchase_Date__c</fullName>
    <label>What is your expected purchase timeline?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Within 1 week</fullName>
            </value>
            <value>
                <fullName>1-4 weeks</fullName>
            </value>
            <value>
                <fullName>1-3 months</fullName>
            </value>
            <value>
                <fullName>3-6 months</fullName>
            </value>
            <value>
                <fullName>No fixed timeline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>