force-app/main/default/objects/TestDriveFeedback__c/fields/Finance_Readiness__c.field-meta.xml
<CustomField>
    <fullName>Finance_Readiness__c</fullName>
    <inlineHelpText>(budget for this purchase)</inlineHelpText>
    <label>Have you arranged financing or a budget?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fully Arranged</fullName>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Exploring options</fullName>
            </value>
            <value>
                <fullName>Not yet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>