force-app/main/default/objects/TestDriveFeedback__c/fields/Fit_For_Use__c.field-meta.xml
<CustomField>
    <fullName>Fit_For_Use__c</fullName>
    <inlineHelpText>(day-to-day usage requirement)</inlineHelpText>
    <label>Does this vehicle meet your requirement?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes, perfectly</fullName>
            </value>
            <value>
                <fullName>Mostly yes</fullName>
            </value>
            <value>
                <fullName>Partially</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>