force-app/main/default/objects/TestDriveFeedback__c/fields/NPS__c.field-meta.xml
<CustomField>
    <fullName>NPS__c</fullName>
    <label>Would you recommend Electra cars?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Definitely yes (Promoter)</fullName>
            </value>
            <value>
                <fullName>Possibly (Passive)</fullName>
            </value>
            <value>
                <fullName>Unlikely (Detractor)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>