force-app/main/default/objects/TestDriveFeedback__c/fields/Payment_Mode__c.field-meta.xml
<CustomField>
    <fullName>Payment_Mode__c</fullName>
    <label>Which payment mode are you considering?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full cash / bank transfer</fullName>
            </value>
            <value>
                <fullName>Bank loan (pre-approved)</fullName>
            </value>
            <value>
                <fullName>Dealership EMI</fullName>
            </value>
            <value>
                <fullName>Exploring loan options</fullName>
            </value>
            <value>
                <fullName>Not decided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>