force-app/main/default/objects/TestDriveFeedback__c/fields/Post_Drive_Comments__c.field-meta.xml
<CustomField>
    <fullName>Post_Drive_Comments__c</fullName>
    <label>Any other comments or requests?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>