force-app/main/default/objects/TestDriveFeedback__c/fields/Purchase_Likelihood__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Likelihood__c</fullName>
    <label>Will you buy this vehicle within 30 days</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Definitely will buy</fullName>
            </value>
            <value>
                <fullName>Very likely</fullName>
            </value>
            <value>
                <fullName>Considering it</fullName>
            </value>
            <value>
                <fullName>Undecided</fullName>
            </value>
            <value>
                <fullName>Unlikely to buy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>