force-app/main/default/objects/TestDriveFeedback__c/fields/Quote_Interest__c.field-meta.xml
<CustomField>
    <fullName>Quote_Interest__c</fullName>
    <label>Want a personalized quote today?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes, with accessories</fullName>
            </value>
            <value>
                <fullName>Yes, base vehicle only</fullName>
            </value>
            <value>
                <fullName>Send later via Whatsapp</fullName>
            </value>
            <value>
                <fullName>No thanks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>