force-app/main/default/objects/TestDriveFeedback__c/fields/Top_Features__c.field-meta.xml
<CustomField>
    <fullName>Top_Features__c</fullName>
    <inlineHelpText>( Select all that apply )</inlineHelpText>
    <label>Which features impressed you the most?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Range/Battery</fullName>
            </value>
            <value>
                <fullName>Acceleration</fullName>
            </value>
            <value>
                <fullName>Cabin comfort</fullName>
            </value>
            <value>
                <fullName>Tech/infotinment</fullName>
            </value>
            <value>
                <fullName>ADAS/Safety</fullName>
            </value>
            <value>
                <fullName>Nothing specific</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>