force-app/main/default/objects/TestDriveFeedback__c/fields/VehicleName__c.field-meta.xml
<CustomField>
    <fullName>VehicleName__c</fullName>
    <label>Kindly share the car model you had the o</label>
    <length>255</length>
    <type>Text</type>
</CustomField>